--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,4 +9,10 @@ build:
     - docker build -t registry.gitlab.com/vinarnt/mjml-server .
     - docker push registry.gitlab.com/vinarnt/mjml-server
   only:
-    - master
+    refs:
+      - master
+    changes:
+      - index.js
+      - Dockerfile
+      - healthcheck.sh
+      - package-lock.json
